# SlimeOptimizer

./: CMakeLists.txt  README.md  config.json  main.cpp
include/: config.hpp  csv_reader.hpp  geometry.hpp  java_random.hpp  optimizer.hpp  slime_check.hpp  types.hpp  visualizer.hpp
output/: result.csv
src/: config.cpp  csv_reader.cpp  geometry.cpp  java_random.cpp  optimizer.cpp  slime_check.cpp  visualizer.cpp
